tests/files/lexer_tests/should_fail/043.cmdr
/* alias bad syntax
    expected: alias <command_variable> = <command> */
alias myCommand 1;